--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,9 @@
                 <div class="apparel__wrap">
 
                     <div class="apparel__logo"><img src="img/logo.svg" alt="circle"></div>
+
+                    <div class="apparel__woman-mobile"></div>
+
                     <div class="apparel__big-text">
                         <span>We're</span><br>
                         coming soon
@@ -40,6 +43,8 @@
             </div>
             <div class="apparel__right-side"></div>
         </div>
+
+        
     </div>
 
 <script src="js/script.js"></script>
